# rust-sdk

./: .env.regtest  .env.sample  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  buf.yaml  clippy.toml  dprint.json  flake.nix  justfile  nix.just  rustfmt.toml
.github/workflows/: ci.yml  create_release_crates.yml  draft_release_crates.yml  e2e-core.yml  e2e-tests.yml
ark-bdk-wallet/: Cargo.toml  README.md
ark-bdk-wallet/src/: lib.rs
ark-client/: Cargo.toml  README.md
ark-client-sample/: Cargo.toml  justfile  swap_storage.sqlite
ark-client-sample/alice/: ark.config.toml  ark.mnemonic
ark-client-sample/bob/: ark.config.toml  ark.mnemonic
ark-client-sample/insiders/: ark.config.toml
ark-client-sample/mutinynet/: ark.config.toml  ark.mnemonic
ark-client-sample/src/: common.rs  main.rs
ark-client/migrations/: 001_initial.sql  002_chain_swaps.sql
ark-client/src/: asset.rs  asset_issuance.rs  batch.rs  boltz.rs  coin_select.rs  contract.rs  error.rs  fee_estimation.rs  key_provider.rs  lib.rs  migration.rs  round.rs  send_vtxo.rs  unilateral_exit.rs  utils.rs  vtxo_watcher.rs  wallet.rs
ark-client/src/boltz/: bolt12.rs
ark-client/src/swap_storage/: memory.rs  mod.rs  sqlite.rs
ark-core/: Cargo.toml  README.md
ark-core/src/: ark_address.rs  arknote.rs  asset.rs  asset_packet.rs  batch.rs  boarding_output.rs  coin_select.rs  contract.rs  conversions.rs  error.rs  extension.rs  history.rs  intent.rs  lib.rs  magic.rs  proof_of_funds.rs  script.rs  send.rs  server.rs  tree_tx_output_script.rs  tx_graph.rs  unilateral_exit.rs  utils.rs  vhtlc.rs  vtxo.rs  vtxo_list.rs
ark-core/src/asset/: packet.rs
ark-core/src/introspector/: packet.rs
ark-core/src/send/: issue_asset.rs  reissue_asset.rs  send_asset.rs
ark-delegator/: Cargo.toml  README.md
ark-delegator/src/: error.rs  lib.rs
ark-dlc-sample/: Cargo.toml
ark-dlc-sample/src/: main.rs
ark-fees/: Cargo.toml  README.md
ark-fees/src/: lib.rs
ark-fees/tests/: integration.rs
ark-fees/tests/testdata/: invalid.json  valid.json
ark-grpc/: Cargo.toml  README.md  build.rs
ark-grpc/proto/ark/v1/: admin.proto  indexer.proto  service.proto  signer_manager.proto  types.proto  wallet.proto
ark-grpc/src/: client.rs  error.rs  lib.rs  test_utils.rs  types.rs
ark-introspector-client/: Cargo.toml  README.md
ark-introspector-client/src/: lib.rs
ark-lightning/: Cargo.toml
ark-lightning/examples/: boltz_ws_example.rs  boltz_ws_reconnect.rs  swap_metadata_example.rs  vhtlc_example.rs
ark-lightning/scripts/: generate_ts_vectors.js
ark-lightning/src/: arkln.rs  boltz.rs  lib.rs  vhtlc.rs
ark-lightning/src/boltz/: boltz.rs  boltz_ws.rs  model.rs  storage.rs
ark-lightning/tests/: vhtlc_fixtures.rs
ark-lightning/tests/fixtures/: vhtlc.json
ark-rest/: ARK-REST-README.md  Cargo.toml  README.md  justfile  merge_swagger.py  openapi-config.yaml
ark-rest-sample/: Cargo.toml  justfile
ark-rest-sample/bob/: ark.seed
ark-rest-sample/src/: main.rs
ark-rest/.openapi-generator/: FILES
ark-rest/docs/: AdminServiceApi.md  Any.md  ArkServiceApi.md  Asset.md  AssetMetadata.md  Balance.md  BanScriptRequest.md  BatchFailedEvent.md  BatchFinalizationEvent.md  BatchFinalizedEvent.md  BatchStartedEvent.md  ConfirmRegistrationRequest.md  Conviction.md  ConvictionType.md  CreateNoteRequest.md  CreateNoteResponse.md  CreateRequest.md  CrimeType.md  DeleteIntentRequest.md  DeleteIntentsRequest.md  DeprecatedSigner.md  DeriveAddressResponse.md  ErrorDetails.md  EstimateIntentFeeRequest.md  EstimateIntentFeeResponse.md  FeeInfo.md  FinalizeTxRequest.md  GenSeedResponse.md  GetActiveScriptConvictionsRequest.md  GetActiveScriptConvictionsResponse.md  GetAssetRequest.md  GetAssetResponse.md  GetBalanceResponse.md  GetBatchSweepTransactionsRequest.md  GetBatchSweepTransactionsResponse.md  GetCommitmentTxRequest.md  GetCommitmentTxResponse.md  GetConnectorsRequest.md  GetConnectorsResponse.md  GetConvictionsByRoundRequest.md  (+146 more)
ark-rest/src/: client.rs  conversions.rs  error.rs  lib.rs
ark-rest/src/apis/: admin_service_api.rs  ark_service_api.rs  configuration.rs  indexer_service_api.rs  mod.rs  signer_manager_service_api.rs  wallet_initializer_service_api.rs  wallet_service_api.rs
ark-rest/src/conversions/: stream.rs
ark-rest/src/models/: any.rs  asset.rs  asset_metadata.rs  balance.rs  ban_script_request.rs  batch_failed_event.rs  batch_finalization_event.rs  batch_finalized_event.rs  batch_started_event.rs  confirm_registration_request.rs  conviction.rs  conviction_type.rs  create_note_request.rs  create_note_response.rs  create_request.rs  crime_type.rs  delete_intent_request.rs  delete_intents_request.rs  deprecated_signer.rs  derive_address_response.rs  error_details.rs  estimate_intent_fee_request.rs  estimate_intent_fee_response.rs  fee_info.rs  finalize_tx_request.rs  gen_seed_response.rs  get_active_script_convictions_request.rs  get_active_script_convictions_response.rs  get_asset_request.rs  get_asset_response.rs  get_balance_response.rs  get_batch_sweep_transactions_request.rs  get_batch_sweep_transactions_response.rs  get_commitment_tx_request.rs  get_commitment_tx_response.rs  get_connectors_request.rs  get_connectors_response.rs  get_convictions_by_round_request.rs  get_convictions_by_round_response.rs  get_convictions_in_range_request.rs  (+147 more)
ark-rest/swagger/: admin.openapi.json  indexer.openapi.json  merged.openapi.json  merged.openapi3.json  merged.swagger.json  service.openapi.json  signer_manager.openapi.json  types.openapi.json  wallet.openapi.json
ark-rest/tests/: wasm.rs
ark-rs/: Cargo.toml  README.md
ark-sample/: Cargo.toml  justfile
ark-script/: Cargo.toml  README.md
ark-script/src/: lib.rs  opcodes.rs  script.rs  tapscript.rs  tweak.rs  vtxo_script.rs
ark-web-app/: Cargo.toml
docs/: cargo-minimal-lock.md  contract-manager-design.md  guarded-grpc-client-design.md
e2e-tests/: Cargo.toml
flutter_wallet_example/: README.md  pubspec.yaml
flutter_wallet_example/native/: Cargo.toml
flutter_wallet_example/native/src/: lib.rs
scripts/: rustfmt-nightly.sh
(+38 files in other folders)
