[package]
name = "ark-client"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = "1.86"
description = "Main client library for interacting with Ark servers"

[lints]
workspace = true

[dependencies]
ark-core = { path = "../ark-core", version = "0.7.0" }
ark-fees = { path = "../ark-fees" }
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22.1"
bech32 = "0.11"
bitcoin = { version = "0.32.7", features = ["rand", "serde"] }
futures = "0.3.31"
jiff = "0.2.1"
lightning-invoice = { version = "0.33.2", features = ["serde"] }
musig = { package = "secp256k1", version = "0.32.0-beta.2", features = ["serde"] }
prost = "0.13.3"
prost-types = "0.13.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"], optional = true }
tokio = { version = "1.41.0", features = ["sync", "rt-multi-thread"] }
tracing = "0.1.37"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
ark-grpc = { path = "../ark-grpc", version = "0.7.0", default-features = false }
backon = { version = "1", features = ["tokio-sleep"] }
tonic = "0.14"

# TODO: We do not yet support WASM in `ark-client`. To support WASM in this high level crate, we
# will need to make it possible to use either `ark-grpc` or `ark-rest`. The current default is
# `ark-grpc`, but only `ark-rest` can support WASM.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
backon = { version = "1", features = ["gloo-timers-sleep"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-prost = "0.14"
tonic-web-wasm-client = { version = "0.6", default-features = false }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(genproto)'.build-dependencies]
tonic-build = { version = "0.14" }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.41.0", features = ["macros", "rt"] }

[features]
default = ["tls-native-roots"]
tls-native-roots = ["tonic/tls-native-roots", "ark-grpc/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots", "ark-grpc/tls-webpki-roots"]
sqlite = ["sqlx"]
test-utils = []
