[package]
name = "ark-core"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = "1.86"
description = "Core types and utilities for Ark"

[lints]
workspace = true

[dependencies]
bech32 = "0.11"
bitcoin = { version = "0.32.7", features = ["base64", "rand", "serde"] }
bs58 = "0.5"
hex = "0.4"
musig = { package = "secp256k1", version = "0.32.0-beta.2", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.37"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
getrandom2 = { package = "getrandom", version = "0.3.1", features = ["wasm_js"] }
js-sys = "0.3"
web-sys = { version = "0.3.77", features = ["Window", "Performance"] }
