[package]
name = "ark-delegator"
version = "0.8.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = "1.86"
description = "REST client for Ark delegator services"

[lints]
workspace = true

[dependencies]
ark-core = { path = "../ark-core", version = "0.8.0" }
bitcoin = { version = "0.32.7", features = ["base64"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt"] }
