[package]
name = "ark-fees"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = "1.75"
description = "Fee library using CEL for calculating Arkade transaction fees"

[lints]
workspace = true

[dependencies]
cel = "0.12.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
