[package]
name = "ark-grpc"
version = "0.8.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = "1.86"
description = "gRPC client for Ark server communication"

[lints]
workspace = true

[dependencies]
ark-core = { path = "../ark-core", version = "0.8.0" }
async-stream = { version = "0.3", default-features = false }
base64 = { version = "0.22", default-features = false }
bitcoin = { version = "0.32.7", default-features = false }
futures = { version = "0.3", default-features = false }
log = "0.4"
prost = { version = "0.14", default-features = false, features = ["std"] }
serde_json = "1.0"
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
default = ["tls-webpki-roots"]
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]
test-utils = []
