[package]
name = "ark-introspector-client"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = "1.86"
description = "Client for the Ark introspector service"

[lints]
workspace = true

[dependencies]
bitcoin = { version = "0.32.7", features = ["base64", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
