[package]
name = "ark-lightning"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ark-core = { path = "../ark-core" }
bitcoin = { version = "0.32.4", features = ["base64", "rand", "serde"] }
lightning = { version = "0.1" }
musig = { package = "ark-secp256k1", path = "../ark-rust-secp256k1", features = ["serde", "rand"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[[example]]
name = "vhtlc_example"
path = "examples/vhtlc_example.rs"
