[package]
name = "ark-rest"
version = "0.7.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2021"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
description = "Combined Ark Service and Indexer API"

[dependencies]
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
