[package]
name = "ark-rest"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = "1.86"
description = "REST client for Ark server communication"

[lints]
workspace = true

[dependencies]
ark-core = { path = "../ark-core", version = "0.7.0" }
base64 = "0.22.1"
bitcoin = { version = "0.32.7", default-features = false }
futures = { version = "0.3" }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
tracing = "0.1.37"
url = "^2.5"
urlencoding = "^2.1"
uuid = { version = "^1.8", default-features = false, features = ["serde", "v4", "js"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
wasm-bindgen-futures = { version = "0.4" }
wasm-streams = { version = "0.4" }

[dev-dependencies]
js-sys = "0.3"
tokio = { version = "1.42", features = ["macros", "rt"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3.77", features = ["console"] }
