[package]
name = "ark-rs"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
description = "Collection of Rust crates designed to simplify building Bitcoin wallets with seamless support for both on-chain and off-chain transactions via the Ark protocol"

[lints]
workspace = true

[dependencies]
ark-client = { path = "../ark-client", version = "0.7.0", optional = true }
ark-core = { path = "../ark-core", version = "0.7.0" }
ark-grpc = { path = "../ark-grpc", version = "0.7.0", optional = true }

[features]
default = []
client = ["ark-client"]
grpc = ["ark-grpc"]
